# CMakeList.txt : CMake project for project_base, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("project_base")

# Add source to this project's executable.
add_executable (project_base "project_base.cpp" "project_base.h")

# TODO: Add tests and install targets if needed.
